[gd_scene load_steps=3 format=3 uid="uid://b6k6vcqoom6ro"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_07vnt"]
[ext_resource type="Texture2D" uid="uid://cndkolyq5t1cc" path="res://assets/sprites/UI/titlescreen_placeholder.bmp" id="2_0kw7p"]

[node name="Game" type="Node2D"]
script = ExtResource("1_07vnt")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-3, 4)
scale = Vector2(0.609896, 0.600463)
texture = ExtResource("2_0kw7p")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Return" type="Button" parent="HUD"]
visible = false
layout_mode = 0
offset_left = -23.0
offset_top = -103.0
offset_right = 38.0
offset_bottom = -72.0
text = "Return"

[node name="Inventory" type="Button" parent="HUD"]
visible = false
layout_mode = 0
offset_left = 151.0
offset_top = -110.0
offset_right = 234.0
offset_bottom = -79.0
text = "Inventory"

[node name="Title" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 43.0
offset_bottom = 42.0

[node name="Start" type="Button" parent="Title"]
layout_mode = 0
offset_left = -26.0
offset_top = 183.0
offset_right = 20.0
offset_bottom = 214.0
text = "Start"

[node name="Main2D" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="Main2D"]

[connection signal="pressed" from="HUD/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="HUD/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Title/Start" to="." method="_on_start_pressed"]
